# bool-like

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: test.rs
