[package]
name = "bool-like"
description = "Derive `Not` for two-variant enums"
authors = ["Dagan Martinez", "ChatGPT"]
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0", default-features = false }
syn = "1.0"
